# tsk

./: .gitignore  Cargo.toml  README.md  SPEC.md
docs/: CNAME  index.html
src/: cli.rs  display.rs  main.rs  store.rs  time.rs  todo.rs
src/commands/: add.rs  clear.rs  delete.rs  done.rs  edit.rs  list.rs  mod.rs  project.rs  stats.rs  today.rs  undo.rs
