[package]
name = "tsk"
version = "1.0.0"
edition = "2021"
description = "A fast, minimal terminal todo manager"
license = "MIT"
authors = ["Your Name"]

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
